hphp/test/quick/invoke.php.expectf
This is Normal
object(Normal)#%d (0) {
}
~Normal
This is Weird
%ANULL
~Weird
This is Weird2
object(Weird2)#%d (0) {
}
~Weird2
This is Weird3
object(Weird3)#%d (0) {
}
~Weird3
closure
%ANULL
static closure
%ANULL
About to fail:

Fatal error: Function name must be a string in %s on line 41
